[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=1]
[ext_resource path="res://assets/world/character.svg" type="Texture" id=2]
[ext_resource path="res://src/UI/Menus/Characters/CharacterColorEditor.gd" type="Script" id=3]
[ext_resource path="res://src/UI/Elements/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/Menus/Characters/CharacterColorPreview.gd" type="Script" id=5]
[ext_resource path="res://src/UI/Components/ColorSelector.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/theme/stylebox/panel_popup.tres" type="StyleBox" id=7]

[node name="CharacterColorEditor" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -368.0
margin_top = -280.0
margin_right = 368.0
margin_bottom = 280.0
rect_min_size = Vector2( 450, 236 )
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 7 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 736.0
margin_bottom = 560.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 96.0
margin_top = 18.0
margin_right = 640.0
margin_bottom = 541.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 544.0
margin_bottom = 31.0
text = "Select a new color"
align = 1

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_top = 47.0
margin_right = 544.0
margin_bottom = 127.0
rect_min_size = Vector2( 80, 80 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
script = ExtResource( 5 )

[node name="Color" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 143.0
margin_right = 544.0
margin_bottom = 447.0
size_flags_horizontal = 3
custom_constants/separation = 25
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorSelector" parent="CenterContainer/VBoxContainer/Color" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 544.0
margin_bottom = 304.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 463.0
margin_right = 544.0
margin_bottom = 523.0
size_flags_horizontal = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OkButton" parent="CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 64.0
margin_right = 264.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 1
text = "Ok"

[node name="CancelButton" parent="CenterContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 280.0
margin_right = 480.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 1
text = "Cancel"
[connection signal="color_changed" from="CenterContainer/VBoxContainer/Color/ColorSelector" to="CenterContainer/VBoxContainer/TextureRect" method="_on_ColorSelector_color_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
